--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@atlaskit/select": "^17.19.0",
+    "@atlaskit/tabs": "^16.4.1",
+    "@atlaskit/textarea": "^5.6.1",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@testing-library/jest-dom": "^5.17.0",
@@ -13,6 +15,7 @@
     "@types/node": "^16.18.108",
     "@types/react": "^18.3.8",
     "@types/react-dom": "^18.3.0",
+    "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "i": "^0.3.7",
     "npm": "^10.8.3",
